--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,3 +4,24 @@
 body {
   font-family: 'Klee One', sans-serif;
 }
+.markdown * {
+  @apply text-gray-500;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.markdown ol {
+  @apply list-decimal pl-10;
+}
+.markdown ul {
+  @apply list-disc pl-10;
+}
+
+.markdown h2 {
+  @apply border-indigo-500 border-l-4 text-2xl my-4 sm:pl-4 pl-2 text-gray-900;
+}
+.markdown ul {
+  @apply list-disc pl-10;
+}
+
+.markdown strong {
+  @apply font-bold;
+}
