--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,8 +4,8 @@
 body {
   font-family: 'Klee One', sans-serif;
 }
-.markdown * {
-  @apply text-gray-500;
+.markdown {
+  @apply text-gray-600;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .markdown ol {
@@ -14,9 +14,11 @@ body {
 .markdown ul {
   @apply list-disc pl-10;
 }
-
+.markdown h1 {
+  @apply sm:text-4xl text-2xl mb-4 text-gray-700;
+}
 .markdown h2 {
-  @apply border-indigo-500 border-l-4 text-2xl my-4 sm:pl-4 pl-2 text-gray-900;
+  @apply border-indigo-500 border-l-2 sm:text-2xl text-xl my-4 sm:pl-4 pl-2 text-gray-900;
 }
 .markdown ul {
   @apply list-disc pl-10;
